<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:padding="6dp">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select_a_scene"
		android:id="@+id/bgmreplacerTextView1"/>

	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_below="@id/bgmreplacerTextView1"
		android:id="@+id/bgmreplacerScene"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select_music_to_replace"
		android:layout_below="@id/bgmreplacerScene"
		android:id="@+id/bgmreplacerTextView2"/>

	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_below="@id/bgmreplacerTextView2"
		android:id="@+id/bgmreplacerMusic"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select"
		android:layout_below="@id/bgmreplacerMusic"
		android:layout_alignParentRight="true"
		android:id="@+id/bgmreplacerSelect"/>

	<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/unselected"
			android:layout_below="@id/bgmreplacerMusic"
			android:id="@+id/bgmreplacerText"
			android:layout_alignBottom="@id/bgmreplacerSelect"
			android:gravity="center_vertical"
			android:layout_toStartOf="@id/bgmreplacerSelect"
			android:layout_alignParentLeft="true"
			android:paddingStart="3dp"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/apply"
		android:id="@+id/bgmreplacerUpdate"
		android:layout_below="@id/bgmreplacerText"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/remove_changes"
		android:layout_toRightOf="@id/bgmreplacerUpdate"
		android:layout_below="@id/bgmreplacerText"
		android:id="@+id/bgmreplacerRemove"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/bgmreplacer_info"
		android:layout_below="@id/bgmreplacerUpdate"
		android:id="@+id/bgmreplacerfragmentTextViewInfo"/>

</RelativeLayout>

