<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:padding="6dp">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select_a_scene"
		android:id="@+id/bgreplacerTextView1"/>

	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_below="@id/bgreplacerTextView1"
		android:id="@+id/bgreplacerSpinner1"
		android:entries="@array/path_bg"/>

	<Spinner
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_toRightOf="@id/bgreplacerSpinner1"
		android:layout_below="@id/bgreplacerTextView1"
		android:id="@+id/bgreplacerSpinner2"
		android:entries="@array/filename_bg"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select_pic"
		android:layout_below="@id/bgreplacerSpinner1"
		android:id="@+id/bgreplacerTextView2"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select"
		android:layout_below="@id/bgreplacerTextView2"
		android:id="@+id/bgreplacerbtn_select"
		android:layout_alignParentRight="true"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/apply"
		android:layout_below="@id/bgreplacerbtn_select"
		android:id="@+id/bgreplacerbtn_update"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/bgfrag_intro"
		android:layout_below="@id/bgreplacerbtn_update"
		android:id="@+id/bgreplacerTextView3"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/remove_changes"
		android:layout_toRightOf="@id/bgreplacerbtn_update"
		android:layout_below="@id/bgreplacerbtn_select"
		android:id="@+id/bgreplacer_remove"/>

	<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_below="@id/bgreplacerTextView2"
			android:layout_toLeftOf="@id/bgreplacerbtn_select"
			android:layout_alignParentLeft="true"
			android:layout_alignBottom="@id/bgreplacerbtn_select"
			android:id="@+id/bgreplacerPic"
			android:text="@string/unselected"
			android:gravity="left|center_vertical"
			android:paddingStart="3dp"/>

</RelativeLayout>

