<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:padding="6dp">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select_file"
		android:id="@+id/loginmoviereplacerfragmentTextViewUnused"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/select"
		android:layout_below="@id/loginmoviereplacerfragmentTextViewUnused"
		android:id="@+id/loginmoviereplacerfragmentButtonSelect"
		android:layout_alignParentRight="true"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/unselected"
		android:layout_below="@id/loginmoviereplacerfragmentTextViewUnused"
		android:id="@+id/loginmoviereplacerfragmentTextView"
		android:layout_alignBottom="@id/loginmoviereplacerfragmentButtonSelect"
		android:gravity="center_vertical"
		android:layout_toLeftOf="@id/loginmoviereplacerfragmentButtonSelect"
		android:layout_alignParentLeft="true"
		android:paddingLeft="3dp"/>

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/apply"
		android:layout_below="@id/loginmoviereplacerfragmentButtonSelect"
		android:id="@+id/loginmoviereplacerfragmentButtonUpdate"/>

	<TextView
		android:id="@+id/loginmoviereplacerinfo"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/loginmoviereplacerfragmentButtonUpdate"
		android:text="@string/loginmovie_intro" />

	<Button
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/remove_changes"
		android:layout_below="@id/loginmoviereplacerfragmentTextView"
		android:layout_toRightOf="@+id/loginmoviereplacerfragmentButtonUpdate"
		android:id="@+id/loginmoviereplacerfragmentButtonRemove"/>

	<include
		layout="@layout/adlayout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/loginmoviereplacerinfo" />

</RelativeLayout>

