<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/modpackageinstaller_main_mainview"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="2dp"
	android:paddingLeft="6dp"
	android:paddingRight="6dp"
	android:paddingTop="6dp">

	<LinearLayout
		android:id="@+id/modinfo_buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="false"
		android:layout_alignParentTop="false"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="6dp"
		android:orientation="horizontal">

		<Button
			android:id="@+id/modinfopageButtonSelect"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:text="@string/select_file" />

		<Button
			android:id="@+id/modinfopageButtonCancel"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:text="@string/cancel" />

		<Button
			android:id="@+id/modinfopageButtonUpdate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:text="@string/install" />

	</LinearLayout>

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/modinfo_buttons"
		android:layout_alignParentTop="true"
		android:layout_marginStart="6dp"
		android:layout_marginTop="6dp"
		android:layout_marginEnd="6dp"
		app:cardCornerRadius="2dp"
		app:contentPadding="6dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/modinfopageImageView"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:adjustViewBounds="true"
				android:src="@drawable/no_preview" />

			<TextView
				android:id="@+id/modinfopageTextView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/modpkg_info_empty" />
		</LinearLayout>
	</androidx.cardview.widget.CardView>

</RelativeLayout>

